--- a/templates/todos/_todo.html
+++ b/templates/todos/_todo.html
@@ -1,9 +1,9 @@
-<li id="todo-{{todo.ID}}" class="{{#if todo.Completed}}completed{{/if}}">
-  <h2>{{todo.Title}}</h2>
-  {{#if todo.Description}}
-    {{markdown todo.Description.String}}
-  {{/if}}
-  {{#form_for todo action=todo.URL method="PUT" data-remote=true}}
-    {{f.CheckboxTag "Completed" label=" Mark as Completed" class="completed-box" }}
-  {{/form_for}}
+<li id="todo-<%= todo.ID %>" class="<%= if (todo.Completed) { %>completed<% } %>">
+  <h2><%= todo.Title %></h2>
+  <%= if (todo.Description) { %>
+    <%= markdown(todo.Description.String) %>
+  <% } %>
+  <%= form_for(todo, {action: todo.URL(), method: "PUT", "data-remote": true}) { %>
+    <%= f.CheckboxTag("Completed", {label: " Mark as Completed", class: "completed-box"}) %>
+  <% } %>
 </li>
