--- a/templates/todos/new.html
+++ b/templates/todos/new.html
@@ -1,6 +1,6 @@
 <h1>New Todo</h1>
 
-<%= form_for(todo, {action: "/todos", errors: errors}) { %>
+<%= form_for(todo, {action: "/todos"}) { %>
   <%= f.InputTag("Title") %>
   <%= f.TextArea("Description", {rows: 10}) %>
   <button class="btn btn-success">Save</button>
