rewrote from scratch to bring it into line with latest buffalo workflows

--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -1,6 +1,20 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+@import "~bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss";
+@import "~bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "~font-awesome/css/font-awesome.css";
 
+.navbar-btn {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+h1 {
+  &.completed {
+    text-decoration: line-through;
+  }
+}
+
 .completed {
-  text-decoration: line-through;
+  label {
+    text-decoration: line-through;
+  }
 }
