--- a/templates/application.html
+++ b/templates/application.html
@@ -1,27 +1,21 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Buffalo - Toodo</title>
-  <link rel="stylesheet" href="/assets/application.css" type="text/css" media="all" />
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <title>Buffalo - Toodo</title>
+    <%= stylesheetTag("application.css") %>
+    <meta name="csrf-param" content="authenticity_token" />
+    <meta name="csrf-token" content="<%= authenticity_token %>" />
+    <link rel="icon" href="<%= assetPath("images/favicon.ico") %>">
+  </head>
+  <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <%= for (k, messages) in flash { %>
-          <%= for (msg) in messages { %>
-            <div class="alert alert-<%= k %>" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <%= msg %>
-            </div>
-          <% } %>
-        <% } %>
-      </div>
+    <div class="container">
+      <%= partial("nav.html") %>
+      <%= partial("flash.html") %>
+      <%= yield %>
     </div>
-    <%= yield %>
-  </div>
 
-  <script src="/assets/application.js" type="text/javascript" charset="utf-8"></script>
-</body>
+    <%= javascriptTag("application.js") %>
+  </body>
 </html>
